Se finalizan la primera version del nuevo diseño

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <!-- /Navbar -->
 
         <!-- Main-->
-        <main id="main">
-          <div class="container mt-5">
+        <main id="main" class="bg-light py-5">
+          <div class="container my-1">
             <div class="row">
               <div class="col-lg-8 col-md-6 mb-4">
                 <div class="row align-items-center">
@@ -80,8 +80,12 @@
                     <img src="img/covid-19.png" width="170" alt="" srcset="">
                   </div>
                   <div class="offset-2 col-md-8 col-lg-6  offset-sm-2 offset-md-0 offset-lg-0">
-                    <h1><b>FREE COVID 19</b></h1>
-                    <h4>Efecto de máquina de escribir.<span>&#160;</span></h4>
+                    <h2><b class="text-font">FREE COVID 19</b></h2>
+                    <h5>
+                      <span class="typewrite" data-period="2000" data-type='["Disinfecting Services", "Sanitization Assessment", "EPA Safe Materials", "EPA Approved Technologies", "Updated Protocols", "Trained Specialized Technicians", "Customized Quotes"]'>
+                        <span class="wrap"></span>
+                    </span>
+                    </h5>
                     <button class="btn btn-elite font-weight-bold shadow">Learn More</button>
                   </div>
                 </div>
@@ -90,7 +94,7 @@
                 <div class="row form-index align-items-center">
                   <div class="col col-md-8 offset-md-2 col-lg-12 offset-lg-0 text-center">
                     <form action="" method="post" class="">
-                      <h1 class="pb-1"><b>Check Availability</b></h1>
+                      <h2 class="pb-1"><b>Check Availability</b></h2>
                       <div class="form-row">
                         <div class="col-lg-8 form-group">
                           <input type="text" class="form-control form-control-lg border-0 bg-white shadow" placeholder="Zip Code">
@@ -110,11 +114,11 @@
         <!-- Main-->
 
         <!-- Cleaning and Maintenance -->
-        <section id="cleaningMaintenance">
+        <section id="cleaningMaintenance"class="py-5">
           <div class="container">
             <div class="row">
               <div class="col text-center">
-                <h2><b>ON DEMAND Commercial Cleaning & Maintenance Services</b></h2>
+                <h3 class="font-weight-bold">ON DEMAND Commercial Cleaning & Maintenance Services</h3>
                 <p>Instantly book highly rated cleaning & maintenance partners within 60 min, 24 hours a day, 365 days a year</p>
               </div>
             </div>
@@ -303,11 +307,11 @@
 
         <!-- howDoesEliteWork -->
         <section id="howDoesEliteWork">
-          <div class="jumbotron text-center mt-5 mb-0">
+          <div class="bg-light py-5 text-center mt-5 mb-0">
             <div class="container">
               <div class="row">
                 <div class="col">
-                  <h1><b>How Does Elite Work?</b></h1>
+                  <h1 class="font-5"><b>How Does Elite Work?</b></h1>
                 </div>
               </div>
               <div class="row">
@@ -319,16 +323,18 @@
           </div>
           <div class="container-fluid">
             <div class="row">
-              <div class="col-md-12 col-lg-4 bg-elite">
-                <div class="p-4 text-white font-weight-bold">
-                  <img src="img/imagenes_varias/guarantee.png" class="mt-4" width="100" alt="" srcset="">
-                  <h3 class="mt-4 font-weight-bold">Your Happiness,</h3>
-                  <h3 class="mt-4 font-weight-bold">Guaranteed</h3>
-                  <p class="mt-4">Your happiness is our goal. If you're not happy, we'll work to make it right. Our friendly customer service agents are available 24 hours a day, 7 days a week. The Elite Happiness Guarantee only applies when you book and pay for a service directly through the Elite Cleaning Concepts platform.</p>
+              <div class="d-none d-lg-block col-lg-8 col-md- offset-md-2 p-0 m-0">
+                <div id="img-banner">
+
                 </div>
               </div>
-              <div class="col-lg-8 col-md- offset-md-2 p-0 m-0">
-                <img src="img/imagenes_varias/imagenweb.png" class="img-web " alt="" srcset="">
+              <div class="col-md-12 col-lg-4 bg-elite">
+                <div class="p-4 font-weight-bold">
+                  <img src="img/imagenes_varias/guarantee.png" class="mt-4" width="100" alt="" srcset="">
+                  <h3 class="mt-4 text-white-important font-weight-bold">Your Happiness,</h3>
+                  <h3 class="mt-4 text-white-important font-weight-bold">Guaranteed</h3>
+                  <p class="mt-4 text-white-important">Your happiness is our goal. If you're not happy, we'll work to make it right. Our friendly customer service agents are available 24 hours a day, 7 days a week. The Elite Happiness Guarantee only applies when you book and pay for a service directly through the Elite Cleaning Concepts platform.</p>
+                </div>
               </div>
             </div>
           </div>
@@ -368,8 +374,8 @@
           <div class="row">
             <div class="col">
               <h1 class="text-white text-center my-5">
-                <span class="font-5">Whe the light go out</span> <br>
-                <span class="font-weight-bold font-8">we make it shine</span> 
+                <span class="font-5 text-white-important">Whe the light go out</span> <br>
+                <span class="font-weight-bold font-8 text-white-important">we make it shine</span> 
               </h1>
             </div>
           </div>
@@ -386,10 +392,10 @@
               </div>
               <div class="col-lg-6">
                 <div class="row">
-                  <div class="col-lg-10 offset-1">
-                    <h2><b class="">Are you a Five Star Partner?</b></h2>
+                  <div class="col-10 offset-1 col-lg-12 offset-lg-0">
+                    <h5><b class="font-5 font-weight-bold">Are you a Five Star Partner?</b></h5>
                     <p class="mt-5">Elite is always looking for service professionals who are experts in their trade and want to provide great service to our clients.</p>
-                    <button class="btn btn-elite-blue">Become a partner <i class="fas fa-chevron-right"></i></button>
+                    <!-- <button class="btn btn-elite-blue">Become a partner <i class="fas fa-chevron-right text-white-important"></i></button> -->
                   </div>
                 </div>
               </div>
@@ -403,7 +409,7 @@
           <div class="container-fluid bg-light">
             <div class="row">
               <div class="col-lg-6">
-                <h2 class="font-3 text-center mt-2">Become a Partner</h2>
+                <h2 class="font-5 font-weight-bold text-center mt-2">Become a Partner</h2>
                 <div class="form-row">
                   <div class="col-10 offset-1">
                     <div class="form-group">
@@ -413,31 +419,31 @@
                 </div>
                 <form action="">
                   <div class="form-row mt-2">
-                    <div class="col-5 offset-1">
+                    <div class="col-10 col-md-5 offset-1">
                       <div class="form-group">
                         <input type="text" placeholder="Name / Nombre" class="form-control border-0 shadow">
                       </div>
                     </div>
-                    <div class="col-5">
+                    <div class="col-10 col-md-5 offset-1 offset-md-0">
                       <div class="form-group">
                         <input type="text" placeholder="Last / Apellido" class="form-control border-0 shadow">
                       </div>
                     </div>
                   </div>
                   <div class="form-row">
-                    <div class="col-5 offset-1">
+                    <div class="col-10 col-md-5 offset-1">
                       <div class="form-group">
                         <input type="text" placeholder="Email / Correo Electronico" class="form-control border-0 shadow">
                       </div>
                     </div>
-                    <div class="col-5">
+                    <div class="col-10 col-md-5 offset-1 offset-md-0">
                       <div class="form-group">
                         <input type="text" placeholder="Phone / Telefono" class="form-control border-0 shadow">
                       </div>
                     </div>
                   </div>
                   <div class="form-row">
-                    <div class="col-5 offset-1">
+                    <div class="col-10 offset-1">
                       <div class="form-group pt-3 pb-2">
                         <label for="" class="d-block font-weight-bold">Apply to / Aplicar a</label>
                         <input type="checkbox" class="border-0 shadow"> Handy <input type="checkbox" class="shadow"> Cleaning
@@ -454,7 +460,7 @@
                   
                 </form>
               </div>
-              <div class="col-lg-6 h-100 img-become-partners">
+              <div class="d-none d-lg-block col-lg-6 h-100 img-become-partners">
                 
               </div>
             </div>
@@ -467,30 +473,30 @@
           <div class="container my-5">
             <div class="row">
               <div class="col-10 offset-1 text-center">
-                <h2 class="text-capitalize"><b>Our Clients</b></h2>
+                <h2 class="text-capitalize mb-5"><b class="font-5">Our Clients</b></h2>
                 <p>Elite Cleaning Concepts provides commercial cleaning & maintenance services to multiple clients Nationwide.
                   With affordable prices and up to date technology</p>
               </div>
             </div>
-            <div class="row text-center mt-3">
-              <div class="col-lg-4 pt-2">
+            <div class="row text-center mt-2">
+              <div class="col-lg-4 pt-5">
                 <img src="img/logo_clientes/imagen1.png" class="clients" alt=" srcset="">
               </div>
-              <div class="col-lg-4 pt-2">
+              <div class="col-lg-4 pt-5">
                 <img src="img/logo_clientes/imagen2.png" class="clients" alt=" srcset="">
               </div>
-              <div class="col-lg-4 pt-2">
+              <div class="col-lg-4 pt-5">
                 <img src="img/logo_clientes/imagen9.png" class="clients" alt=" srcset="">
               </div>
             </div>
             <div class="row text-center">
-              <div class="col-lg-4 pt-2">
+              <div class="col-lg-4 pt-5">
                 <img src="img/logo_clientes/imagen7.png" class="clients" alt=" srcset="">
               </div>
-              <div class="col-lg-4 pt-2">
+              <div class="col-lg-4 pt-5">
                 <img src="img/logo_clientes/imagen4.png" class="clients" alt=" srcset="">
               </div>
-              <div class="col-lg-4 pt-2">
+              <div class="col-lg-4 pt-5">
                 <img src="img/logo_clientes/imagen5.png" class="clients" alt=" srcset="">
               </div>
             </div>
@@ -500,11 +506,11 @@
 
         <!-- contact -->
         <section id="contact">
-          <div class="container-fluid bg-light p-5">
+          <div class="container-fluid bg-light">
             <div class="row">
-              <div class="col-8 offset-2">
-                <h2 class="font-weight-bold text-center">Contact us</h2>
-                <form action="">
+              <div class="col-12 col-md-8 offset-0 offset-md-2">
+                <h2 class="font-weight-bold text-center font-5 my-5">Contact Us</h2>
+                <form action="" class="container mb-5">
                   <div class="form-row mt-2">
                     <div class="col-10 offset-1">
                       <div class="form-group">
@@ -513,12 +519,12 @@
                     </div>
                   </div>
                   <div class="form-row">
-                    <div class="col-5 offset-1">
+                    <div class="col-10 col-md-5 offset-1 offset-md-1">
                       <div class="form-group">
                         <input type="text" placeholder="Email / Correo Electronico" class="form-control form-control-lg border-0 shadow">
                       </div>
                     </div>
-                    <div class="col-5">
+                    <div class="col-10 col-md-5 offset-1 offset-md-0">
                       <div class="form-group">
                         <input type="text" placeholder="Phone / Telefono" class="form-control form-control-lg border-0 shadow">
                       </div>
@@ -534,7 +540,7 @@
                   <div class="form-row">
                     <div class="col-10 offset-1">
                       <div class="form-group">
-                        <button type="button" class="btn btn-elite-blue btn-block shadow-lg">Become a Partner</button>
+                        <button type="button" class="btn btn-lg btn-elite-blue btn-block shadow-lg">Become a Partner</button>
                       </div>
                     </div>
                   </div>
@@ -551,8 +557,8 @@
           <div class="row">
             <div class="col">
               <h1 class="text-white text-center my-5">
-                <span class="font-3">24/7 Customer Service</span> <br>
-                <span class="font-weight-bold font-5">1 (833) 613-5483</span> 
+                <span class="font-4">24/7 Customer Service</span> <br>
+                <span class="font-weight-bold font-6">1 (833) 613-5483</span> 
               </h1>
             </div>
           </div>
@@ -587,23 +593,23 @@
             </div>
             <div class="row text-center mt-5">
               <div class="col-12 col-md-3 offset-md-3 text-center">
-                <p><a href="#"><i class="fas fa-envelope"></i> cs@elitecleaningconcepts.com
+                <p><a href="#"><i class="fas fa-envelope text-white-important"></i> cs@elitecleaningconcepts.com
                 </a><br>
               </div>
               <div class="col-12 col-md-3 text-center">
-                <a href="#"><i class="fas fa-phone"></i> cs@elitecleaningconcepts.com</a>
+                <a href="#"><i class="fas fa-phone text-white-important"></i> cs@elitecleaningconcepts.com</a>
               </div>
               </div>
               <div class="row mt-2 text-center font-3 text-white">
                 <div class="col-2 offset-5 offset-lg-10 font-3>
-                  <a href="#"><i class="fab fa-instagram"></i></a>
-                  <a href="#"><i class="fab fa-facebook"></i></a>
+                  <a href="#"><i class="fab fa-instagram text-white-important"></i></a>
+                  <a href="#"><i class="fab fa-facebook text-white-important"></i></a>
                 </div>
               </div>
             </div>
           </div>
         </footer>
-        <div class="text-center text-white p-1 bg-dark"><small>©Copyright 2005 - 2019 Elite Cleaning Concepts - All Rights Reserved</small></div>
+        <div class="text-center text-white-important p-1 bg-dark"><small class="text-white-important">©Copyright 2005 - 2019 Elite Cleaning Concepts - All Rights Reserved</small></div>
         <!-- footer -->
 
     <!-- Optional JavaScript -->
@@ -611,5 +617,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+    <!-- TextType -->
+    <script src="js/TxtType.js"></script>
   </body>
 </html>
